--- a/styles/atom-shell-commands.less
+++ b/styles/atom-shell-commands.less
@@ -12,6 +12,7 @@
 	white-space: pre-line;
 	background-color: @inset-panel-background-color;
 	max-height: 24em;
+	min-height: 5em;
 	overflow-y: scroll;
 }
 
