--- a/styles/atom-shell-commands.less
+++ b/styles/atom-shell-commands.less
@@ -28,6 +28,16 @@
 	color: @text-color-warning;
 }
 
+.filename {
+	color: @text-color;
+	cursor:pointer;
+}
+.filename:hover {
+	text-decoration:underline
+}
+
 .echo {
 	color: @text-color-info
 }
+
+
