new bottom panel

--- a/styles/atom-shell-commands.less
+++ b/styles/atom-shell-commands.less
@@ -28,6 +28,22 @@
 	color: @text-color-warning;
 }
 
+.stdout-match {
+	color: @text-color;
+}
+
+.stdout-match:hover {
+	text-decoration: underline;
+}
+
+.stderr-match {
+	color: @text-color-warning;
+}
+
+.stderr-match:hover {
+	text-decoration: underline;
+}
+
 .filename {
 	color: @text-color;
 	cursor:pointer;
