new white-space:pre in the style

--- a/styles/atom-shell-commands.less
+++ b/styles/atom-shell-commands.less
@@ -22,14 +22,17 @@
 
 .stdout {
 	color: @text-color;
+	white-space: pre;
 }
 
 .stderr {
 	color: @text-color-warning;
+	white-space: pre;
 }
 
 .stdout-match {
 	color: @text-color;
+	white-space: pre;
 }
 
 .stdout-match:hover {
@@ -38,22 +41,16 @@
 
 .stderr-match {
 	color: @text-color-warning;
+	white-space: pre;
 }
 
 .stderr-match:hover {
 	text-decoration: underline;
 }
 
-.filename {
-	color: @text-color;
-	cursor:pointer;
-}
-.filename:hover {
-	text-decoration:underline
-}
-
 .echo {
-	color: @text-color-info
+	color: @text-color-info;
+	white-space: pre;
 }
 
 
