--- a/styles/atom-shell-commands.less
+++ b/styles/atom-shell-commands.less
@@ -26,7 +26,7 @@
 }
 
 .stdout-match {
-	color: @text-color-error;
+	color: @text-color-warning;
 	white-space: pre;
 }
 
@@ -35,7 +35,7 @@
 }
 
 .stdout-match-selected {
-	color: @text-color-error;
+	color: @text-color-warning;
 	background-color: @background-color-highlight;
 	white-space: pre;	
 }
@@ -46,12 +46,12 @@
 
 
 .stderr {
-	color: @text-color-warning;
+	color: @text-color;
 	white-space: pre;
 }
 
 .stderr-match {
-	color: @text-color-error;
+	color: @text-color-warning;
 	white-space: pre;
 }
 
@@ -60,7 +60,7 @@
 }
 
 .stderr-match-selected {
-	color: @text-color-error;
+	color: @text-color-warning;
 	background-color: @background-color-highlight;
 	white-space: pre;
 }
