--- a/styles/atom-shell-commands.less
+++ b/styles/atom-shell-commands.less
@@ -34,17 +34,6 @@
 	text-decoration: underline;
 }
 
-.stdout-match-selected {
-	color: @text-color-warning;
-	background-color: @background-color-highlight;
-	white-space: pre;	
-}
-
-.stdout-match-selected:hover {
-	text-decoration: underline;
-}
-
-
 .stderr {
 	color: @text-color;
 	white-space: pre;
@@ -59,18 +48,12 @@
 	text-decoration: underline;
 }
 
-.stderr-match-selected {
-	color: @text-color-warning;
+.selected {
 	background-color: @background-color-highlight;
-	white-space: pre;
-}
-
-.stderr-match-selected:hover {	
-	text-decoration: underline;
 }
 
 .echo {
-	color: @text-color-success;
+	color: @text-color-subtle;
 	white-space: pre;
 }
 
